--- a/IELTS/语料库听写/听写记录4.md
+++ b/IELTS/语料库听写/听写记录4.md
@@ -47,13 +47,13 @@ a great vairy of, a balanced diet, a couple of, a pair of classes, a period of t
 bolletin board, breathtaking, breed fish, British Council, British Library, British museum, borden one's horizon ,borden one's view, brother-in-law, buses, bus pass, bus routes, business card, business class, business culture, business ethics, business faculty, business studies, business trip, cages, cabin keys, cable car, circulation desk, course slip, campus crime, candles, cannot meet the deadline, car model, car rental, car tyers, car index, card catelog, comment card, carbon dioxide, carve, carving wood, case study, case studies, choices for facilities, cassette recorder, CD player, CD-ROM, casual clothes, casual wear, charges, cater to, catering facilities, catering staff, center hall, center management, cnetral heating, central avenue, central park, central station, cirtificate of childcare, charitable organization, charity hospital, check in, check out, checklist, chest infection, chemistry lab, Church Road, check book, check card, consatrate on, circuse performance, Children's Day, cheese production, city's expansion, city council, city overhead view, commuters, class representative, conquorers, cleaning equipment, cleaning materials, clare arguments, classmates, coase texture, comfortable clothes, colleagues, clock watch, close shelf, close-book exam, closed reserve, closed-circurt TV, coffee shop, coffee break, coffee machine, collection tank, collections, college close-up, common residence, common room, common sense, communication skills, communication strategies, communication technology, conference report, contact list, company actions, compulsory course, computer model, computer programmer, computer sound card, computer system, connecting flight, concert hall, concert room, classical music
 
 #### test paper 3
-contact lenses, coopeating research elements, coping with stress, corporate loan, cost effective, cost of living, costume party, cough mixture, country music, course fee, course and materials, course director, cover the cost, craft goods, credit card, creeks, crime awareness, crime rate, cross passage, cultural differences, culture shock, curve chart, currency form, current account, cycling route, customer service, cut and polished, damages, dark clothes, dark trousers, dateline, data analysis, data assessment, date of birth, date of expiry, date slip, day pupil, day school, day shift, depth, decades, decayed teeth, decoration balloons, deliver a speach, delivery desk, department building, department store, departmental address, desire to learn, desk lamp, details, detective film, digital camera, digital system, different levels, dinning hall, dinning room, diseases, distant deadline, distant learning, divorce rate, distinguishing feature, distributeion of population, downward trend, do training course, docotr's degree, domestic factors, domestic student, domestic violence, door key, door-to-door service, drugs, double lock, double room, double grill, drama theator, drama festival, drama teacher, draw a conclusion, disabled access, dropout rate, dress code, dress rehearsal, disbutes, drinking machine, drink and snacks, drink less coffee, driver's license, driving license, directors, drop-off site, drop-off, EL Nino, Eagle Road, eastern beach, eat harmful insects, economic growth, economic history, economy class, education exhibition, education officer, education standar, education system, electronic director, electric fan, electricity bill, electricity fee, electronic dictionary, email attatment, email account, email address, emergency contact person, emergency telephone number, dial
+contact lenses, cooperating research elements, coping with stress, corporate loan, cost effective, cost of living, costume party, cough mixture, country music, course fee, course and materials, course director, cover the cost, craft goods, credit card, creeks, crime awareness, crime rate, cross passage, cultural differences, culture shock, curve chart, currency form, current account, cycling route, customer service, cut and polished, damages, dark clothes, dark trousers, dateline, data analysis, data assessment, date of birth, date of expiry, date slip, day pupil, day school, day shift, depth, decades, decayed teeth, decoration balloons, deliver a speach, delivery desk, department building, department store, departmental address, desire to learn, desk lamp, details, detective film, digital camera, digital system, different levels, dinning hall, dinning room, diseases, distant deadline, distant learning, divorce rate, distinguishing feature, distributeion of population, downward trend, do training course, docotr's degree, domestic factors, domestic student, domestic violence, door key, door-to-door service, drugs, double lock, double room, double grill, drama theator, drama festival, drama teacher, draw a conclusion, disabled access, dropout rate, dress code, dress rehearsal, disbutes, drinking machine, drink and snacks, drink less coffee, driver's license, driving license, directors, drop-off site, drop-off, EL Nino, Eagle Road, eastern beach, eat harmful insects, economic growth, economic history, economy class, education exhibition, education officer, education standar, education system, electronic director, electric fan, electricity bill, electricity fee, electronic dictionary, email attatment, email account, email address, emergency contact person, emergency telephone number, dial
 
 #### test paper 4
 emotion and mood, end of term, endangered species, energy industory, engineers, engineering room, engrave, enrollment fee, entrance fee, environment agency, environmental damage, environmental issues, environmental sciences, environmental studies, environmentally-friendly, evening news, evening appointment, axercise one's muscles, exhibition of instruments, experimental for construction, experimental facilities, expected duration, express train, express way, extension number, extensive writing, exchange drafts, extra charge, extra workload, ethical film, eye doctor, eye contacts, essay plan, extinct species, face-to-face interview, failure rate, family medical history, famillar with, familiy abuse, family ticket, family name, family relationship, fancy dress, fancy ball, fancy dress party, falcons, farewell party, farming products, fear of unemployment, feel one's pulse, female corpse study, field method, field system, field trip, field work, film festival, film studio, financial advice, financial affairs, financial budget, financial department, financial -, financial goals, financial market, financial organization, financial policy, financial problems, financial shortage, financial source, fine arts, fine texture, fire alarm, fire blanket, fire drill, fire management, first floor, first name, first aid kit, first-year student, fish cakes, fish tank, fishing boat, fishing industry, fitness center, fitness club, fitness level, fitness training, fixed expenses, flexable working time, flight number, flowers's taste, flying craft, flying speed, food processing, food and oil, food chain, focus on, football club, football match, for sale, forestry industry, formal clothes, four nights, fortnight, fourth-year student
 
 #### test paper 5
-free for heating, free of charge, free transportation, fruit juice, fruit trees, functions and places, full-time, full name, fur trade, further education, garden hall, garden tools, generation of electricity, gas station, general relection, general english, general english practise, general health, general ideas, general method, general science, geography trip, geographic location, geographic value, give sb a sack, given name, give a prescription, give up, give a speach, give confirmation, get feedbacks, guide book, guided tour, go to hospital, global listening, global warming, gold medal, gold street, golf club, good eyesight, good shoes, good steering, goodbye party, government policy, government-funded, grasp keywords, graduate school, graduation announcement, grain pattrern of timber, grain pattern, grate favourites, ground floor, green waste, greyhound bus, group discussion, gym membership, hens, high wind, half human, half term, hard-hoofed animal, hall of residence, hall of residences, hand pump, hands broken, have access to, harmful insects, harmful to human, hanve strong heart and lung, have an operation, have high rank in geography, have strong financial muscls, help desk, head master, head office, health care, health check, health club, heart attack, heart beats, heart disease, heat indicator, horse hair, horse riding, herb tea, hurb of cattle, host family, high rank, highly-trained staff, higher education, high-rising buildings, high quality camera, honeymoon suite, historical museum, history of school, historical maps, horror film, hot doy, hot meal, hot house effect
+free for heating, free of charge, free transportation, fruit juice, fruit trees, functions and places, full-time, full name, fur trade, further education, garden hall, garden tools, generation of electricity, gas station, general relection, general english, general english practise, general health, general ideas, general method, general science, geography trip, geographic location, geographic value, give sb a sack, given name, give a prescription, give up, give a speach, give confirmation, get feedbacks, guide book, guided tour, go to hospital, global listening, global warming, gold medal, gold street, golf club, good eyesight, good shoes, good steering, goodbye party, government policy, government-funded, grasp keywords, graduate school, graduation announcement, grain pattrern of timber, grain pattern, grate favourites, ground floor, green waste, greyhound bus, group discussion, gym membership, hens, high wind, half human, half term, hard-hoofed animal, hall of residence, hand pump, hands broken, have access to, harmful insects, harmful to human, hanve strong heart and lung, have an operation, have high rank in geography, have strong financial muscls, help desk, head master, head office, health care, health check, health club, heart attack, heart beats, heart disease, heat indicator, horse hair, horse riding, herb tea, hurb of cattle, host family, high rank, highly-trained staff, higher education, high-rising buildings, high quality camera, honeymoon suite, historical museum, history of school, historical maps, horror film, hot doy, hot meal, hot house effect
 
 #### test paper 6
 hotel crime, hunt for, house insurance, house key, housing agency, human beings, human cumption, human race, human resources, ice curling, ice pack, ice skating, identities, identity card, illegal profits, invisible view, immune system, in advance, in chemisty lab, in circles, in circulation, Indian Ocean, incoming calls, Indenpendent Day, industrial material, information board, information video, information desk, information page, information sector, inland region, initial migration, injection of vaccine, institutes, institutions, insects haunting, instructors, instruction of handbook, instant coffe, interpersonal skills, insurance companies, insurance company, entensive course, entensive study, interlibray service, intermedia course, internal clock, international club, international evening, international student card, international student, internet access, internet cafe, internet system, investigators, irrigable land, isolated spots, job interview, jaws, joint membership, keepers, jump the queue, jump the line, killer whales, Kungfu film, kelp forest, key approach, key to reception, keywords, kick sb out of work, King size'd bed, King's suite, knives, kitchen table, kitchen utensils, lamps, listening tapescript, lab equipment, lack confidence, lacd of confidence, landmark, large slide, large-scale housing, lecture hall, laser printing, last but not least, last name, lawyers, layout of resume, learning strategies, learning styles, leisure wear, leisure activities, level of maturity, lemon tree, letter fo recommondation, library card, library resources, life science, life cycle, life expectancy, life insurance, lights, link to, literary film, list of headings, list of objective
@@ -74,4 +74,4 @@ sky dome, sleeping pills, sleeping sickness, slide presentation, small scale, sm
 theme garden, theme of project, theme park, theoretical background, theoretical framework, tiger shark, theory chapter, theory of application, therapy method, tilled land, third floor, third-year student, thinking pattern, way of thinking, time table, time measurement, time priority, time management, title of essay, to some degree, to some extent, toilet facilities, too much work, tomatoes, towns, top shelf, top ten, touching rocks, tour guide, tourism organization, tourist brochures, town hall, toy factory, traffic flow, traffic jam, traffic lights, traffic rules, traffic safety, transportation card, travel agency, travel package, traveler's check, treatment method, trinity college, tropical diseases, tuition fee, tutorial system, twin room, tv seires, tv chat show, under pressure, under go precession, underground car park, underground railway, unhealthy diet, union bank, unit of measurement, university drive, university facilities, university guide, university of wolonggang, university resources, unsocial hours, upward trends, urban area, vacuum cleanner, vacuum the stairs, vary according to the type, shape, vary one's diet, vegetable burger, video project, video recording, video signal, video tape editor, visual aids, VIP class, virtual learning, VISA, violent crimes, vocanic dust, warm bath, volume chart, voting system, wating list, walking boots, walking club, weight training, washable shoes, washing machine, wedding photos, waste handling, waste disposal, X-ray, weaving blanket, water fee, water heater, water park, water resources, water skiing, weekly return, welcome package, welcome party, welfare department, western Europe, wheel chair, white meat, whole sale, wide reading, wide writing, widen one's horizon, woden one's view, wind power, wind tunnels, window dressing, wing design, withdraw cash, women author, wood should be cut and seasoned, word objective, work place, work systematically, world expo, wretched boat, wild animals, youth hostel, your own embassy, yellow fever
 
 #### test paper 12
-abbrivation access accessible accident affair announcement assume accommodation recommendation annex according breeding surrounding cooking account accountancy accounting addition additional address dress dressing assessment admission commission depression affect effect effective effectively appeal annual arrival applicant application applied applience approach appointment approval approximate assistance assitant assosiate assosiation attachment attack attempt attitude attend attendence attension attensive business balloon cartoon spoon billion ballroom bathroom playroom roommate barren barrer better buffer beginner beginning planner planning blood bloom boot book booking booklist canibal connect cassette cattle classical classification classmate comment commercial communication community common cutton coffee cottage clim- rainging wedding banned current currency cooperate crossroads dessert dessertaiton different dirrerence dinner dizzy little pizza discuss discussion speach suggestion door dollar floor poor efficient essential excurate essay embassy issue corricul- express congress pressed pressure fee feedback ferry fossil food foot football footprints goods gallon grammer handbook textbook notebook newsletters hippo hover horror hall immune irrigation irritation useless impossible incorrect innovation interviewee lesson degree likelihood firewood matter mamal mass massage midday million - lookout occasion occupant occupation occupational offer office officer passage passport password pattern paddle penny personnel pottery process processing profession professor questionnaire possibility opportunity rubber otter rubbish russia school kangaroo scottish screen seafood settlement shuttle shopping swimming skiing setting steel steering stress stressful stiff stuff staff cliff success successful session consession summary summer summit supplimentary supply support supportive tennis tunnel tootache traffic terraced terrestrial vaccine vacuum waitress willow weed wood woods zoo
+abbrivation access accessible accident affair announcement assume accommodation recommendation annex according breeding surrounding cooking account accountancy accounting addition additional address dress dressing assessment admission commission depression affect effect effective effectively appeal annual arrival applicant application applied applience approach appointment approval approximate assistance assistant assosiate assosiation attachment attack attempt attitude attend attendence attension attensive business balloon cartoon spoon billion ballroom bathroom playroom roommate barren barrer better buffer beginner beginning planner planning blood bloom boot book booking booklist canibal connect cassette cattle classical classification classmate comment commercial communication community common cutton coffee cottage clim- rainging wedding banned current currency cooperate crossroads dessert dessertaiton different dirrerence dinner dizzy little pizza discuss discussion speach suggestion door dollar floor poor efficient essential excurate essay embassy issue corricul- express congress pressed pressure fee feedback ferry fossil food foot football footprints goods gallon grammer handbook textbook notebook newsletters hippo hover horror hall immune irrigation irritation useless impossible incorrect innovation interviewee lesson degree likelihood firewood matter mamal mass massage midday million - lookout occasion occupant occupation occupational offer office officer passage passport password pattern paddle penny personnel pottery process processing profession professor questionnaire possibility opportunity rubber otter rubbish russia school kangaroo scottish screen seafood settlement shuttle shopping swimming skiing setting steel steering stress stressful stiff stuff staff cliff success successful session consession summary summer summit supplimentary supply support supportive tennis tunnel tootache traffic terraced terrestrial vaccine vacuum waitress willow weed wood woods zoo
