--- a/IELTS/语料库听写/标准答案.md
+++ b/IELTS/语料库听写/标准答案.md
@@ -1,6 +1,6 @@
 ## chapter 3
 #### test paper 1
-ability abstract accountant accuracy acid action activity actor adult adventure advertisements advertising advice age agency agreement agriculture aid aim air allergy alley allowance alteration altitude ambition ambulance amount analysis analyst anger animal ankle answer Antarctica ape appearance architect architectures area argument aristocrat army art article aspirin assignment atlas audience auditorium author authority average award bachelor background bacteria badge badminton backpack baldness band bandage bands bank banquet base basement bases basis bath batteries battery beach beard beats beauty bed bedroom bed sheet betsit behaviors belt benefit beverage bibliography bicycle bill biologist bird birth blanket blast block blouse board boarder boat bone bowl bowling branch breakfast brick bridge brochures building bungalow burger burgelar bus cab
+ability abstract accountant accuracy acid action activity actor adult adventure advertisements advertising advice age agency agreement agriculture aid aim air allergy alley allowance alteration altitude ambition ambulance amount analysis analyst anger animal ankle answer Antarctica ape appearance architect architectures area argument aristocrat army art article aspirin assignment atlas audience auditorium author authority average award bachelor background bacteria badge badminton backpack baldness band bandage bands bank banquet base basement bases basis bath batteries battery beach beard beats beauty bed bedroom bed sheet bedsit behaviors belt benefit beverage bibliography bicycle bill biologist bird birth blanket blast block blouse board boarder boat bone bowl bowling branch breakfast brick bridge brochures building bungalow burger burglar bus cab
 
 #### test paper 2
 cabinet cable cafe cafeteria cage Cambridge camel camera camp campus candidate candle canteen capital capsule carbon care career carpet carving cashier castle category cathedral cause cave cents century certificate chair chance chancellor channel chapter character charge charity chart chat checklist checks cheese chemist's chest chick chicken child chin chocolate choice church cinema circle city clarity cleaner cleaning client cliffs climate clinic clock cloth clothing club coach coast code coke cola colleague college comedy commercials commuter companion company complaint complex computer concert conclusion condition conferences confidence confirmation congestion conqueror conquest conversation conservation construction consultant consumption contact container contaminants contamination content continent contract contracts controversy convenience cooperations cop copy corporation corpse correspondence cost costume cot cottage cough council country course crack craft cream credit creek crime crisis crocodile crop cultivation culture cup cupboard curtain customer cutlery cycle cycling damage danger data date day deadline debate
@@ -9,7 +9,7 @@ cabinet cable cafe cafeteria cage Cambridge camel camera camp campus candidate c
 debt decade decision decline decorations delay delegate delight delivery demonstration dentist department deposit depth description desert design designer desire desk destination detail diary dictation diet dining dinner dioxide direction director disagreement disaster discipline disco discomfort discos discount discovery disease dish disposal dispute distance divorce document documentary donation donkey draft drama draw drawer drink drinking driver driving drug drum due duration dust duty eagle ear east eating economy editor education elbow elder electricity elements elevator emotion emperor employee employer encyclopedia ending energies engine engineer entrance epidemic equipment ethic evening event evidence examination example exception exchange excitement excursion excuse exercises exhibition existence existing expansion expense experiment expert explanation explosion exposition exposure extension facility factor factory
 
 #### test paper 4
-faculty failure falcon fan fare farm farmer farming fashion fat feast feather feature feedback fellowship female ferries festival field figure film finding finger firms fish fishing flag flash flat flight flood flooding flour flourish flow flu fly forest forestry form formula fortnight fortune foyer freedom freezer freshman fruit fur furniture future gallery gap garage garbage garden gasoline gender germ gesture glass goal gold golf grade grades graduate graduates grain grass green ground group growth guest guide gulf guy gym habit hand handball handbooks handling handout hat headache heading health hearing heart heating hen herb hero heroes heroine hike hiking hint hints historian hit hits hobby holiday horse hospital housework housing households hour
+faculty failure falcon fan fare farm farmer farming fashion fat feast feather feature feedback fellowship female ferries festival field figure film finding finger firms fish fishing flag flash flat flight flood flooding flour flourish flow flu fly forest forestry form formula fortnight fortune foyer freedom freezer freshman fruit fur furniture future gallery gap garage garbage garden gasoline gender germ gesture glass goal gold golf grade grades graduate graduates grain grass green ground group growth guest guide gulf guy gym habit hand handball handbooks handling handout hat headache heading health hearing heart heating hen herb hero heroes heroine hike hiking hint hints historian hit hits hobby holiday horse hospital households hour
 
 #### test paper 5
 hotel hotline hunt hunting idea identification identity image impact imports inability incoming index industry infection influence information injection injury inland insect insomnia institute institution instruction instructor instrument interest internet interviewer introduction investigator investment irrigation island isolation item jacket jam jaw jeans journal judge juice junction junior keeper kelp keyword kid king kiosk kit kitchen kits knife knowledge koala lab lake lamp land landmark landscape language laptop laser lava lawyer layer lecture lecturer leisure lemon lender length lesson letter level library lift light line lion lists loan location lock loss lounge loyalty luck lunch lung machine magazine maid mail majority making male manager mane manufacture map margin mark market marketing marsh master mat matching material maturity maximum meal measure measurement meat media medication medicine medium method microphone migration mile mileage milk mine mineral mill minimum minute mixture model money monopoly month mood morality mosquito motel mountain 
@@ -44,10 +44,10 @@ almost currently directly effectively efficiently originally physically professi
 a great variety of, a balanced diet, a couple of, a pair of glasses, a period of time, A plus, a series of, a serious person, a sharp turn, abilities, academic English, academic problem, academic system, academic teaching staff, accommodation expense, accommodation fee, accommodation form, accountants, action plan, added panic, admission card, admission office, adult students, advanced course, advanced degree, Advanced English Studies, agrarian reform, ahead of time, aim of lecture, aims, air pollution, air pump, air shuttle bus, air conditioner, alarm system, alternative energies, ATM, amusement park, an educational film, analyse data, ancient temple, annual membership fee, answer questions, ant intelligence, antibiotics and acid, appearances, apple juice, application form, applied mathematics, applied science, architecture style, Arctic Ocean, Atlantic Ocean, avoid touching rocks, arm badge, arrive at one's destination, art gallery, art mesuem, articles from journal, artistic approach, Asian studies, assessment methods, assessment of patients, assistant professor, associate with, assume the responsibility, at least, area for improvement, awards, atmospheric pollution, atmospheric warming, Australian Dollars, average ability, bricks, bowls, Bachelor's Degree, bad eyesight, bad management, Baked Earth, bank statement, bank transfer, banking center, bar chart, bar code, barbecue set, barren land, barren mine, basic course, basic rule, be allergic to sth, be out of temper, bed sheet, bed linen, be prone to, beginning course, belts, biological clock, black raincoat, black skirt, black tea, black trousers, black velvet, blocks, blood flow, blood sample, bloom of flowers, blue sweater, boarding school, boat trip, book in advance, book reservation, bones, bowling alley, botanical garden
 
 #### test paper 2
-bulletin board, breathtaking, breed fish, British Council, British Library, British Museum, broaden one's horizon, broaden one's view, brother-in-low, buses, bus pass, bus routes, business card, business class, business culture, business ethic, business faculty, business study, business trip, cages, cabin keys, cable car, circulation desk, call slip, campus crime, candles, cannot meet the deadline, car model, car rental, car tyers, card index, card catalog, comment card, carbon dioxide, carve, carving wood, case study, case studies, choices for facilities, cassette recorder, CD player, CD-ROM, casual clothes, casual wear, charges, cater to, catering facilities, catering staff, center hall, center manager, central heating, Central Avenue, Central Park, Central Station, certificate of childcare, charitable orgnization, charity hospital, check in, check out, checklist, chest infection, chemistry lab, Church Road, checkbook, check card, concentrate on, circus performance, Children's Day, cheese production, city's expansion, city council, city overhead view, commuters, class representative, conquerors, cleaning equipment, cleaning materials, clear argument, classmates, coarse texture, comfortable clothes, colleagues, clock watch, closed shelves, close-book exam, closed reserve, closed-circuit TV, coffee shop, coffee break, coffee machine, collection tank, collections, college close-up, common residence, common room, sense, communication skills, communication strategies, communication technology, conference reports, contact list, company actions, compulsory course, computer model, computer programmer, computer sound card, computer system, connecting flight, concert hall, concert room, classical music
+bulletin board, breathtaking, breed fish, British Council, British Library, British Museum, broaden one's horizon, broaden one's view, brother-in-law, buses, bus pass, bus routes, business card, business class, business culture, business ethic, business faculty, business study, business trip, cages, cabin keys, cable car, circulation desk, call slip, campus crime, candles, cannot meet the deadline, car model, car rental, car tyers, card index, card catalog, comment card, carbon dioxide, carve, carving wood, case study, case studies, choices for facilities, cassette recorder, CD player, CD-ROM, casual clothes, casual wear, charges, cater to, catering facilities, catering staff, center hall, center manager, central heating, Central Avenue, Central Park, Central Station, certificate of childcare, charitable organization, charity hospital, check in, check out, checklist, chest infection, chemistry lab, Church Road, checkbook, check card, concentrate on, circus performance, Children's Day, cheese production, city's expansion, city council, city overhead view, commuters, class representative, conquerors, cleaning equipment, cleaning materials, clear argument, classmates, coarse texture, comfortable clothes, colleagues, clock watch, closed shelves, close-book exam, closed reserve, closed-circuit TV, coffee shop, coffee break, coffee machine, collection tank, collections, college close-up, common residence, common room, sense, communication skills, communication strategies, communication technology, conference reports, contact list, company actions, compulsory course, computer model, computer programmer, computer sound card, computer system, connecting flight, concert hall, concert room, classical music
 
 #### test paper 3
-contact lenses, cooperating research elements, coping with stress, corperation loan, cost effective, cost of living, costume party, cough mixture, country music, course fee, course and materials, course director, cover the cost, craft goods, credit card, creeks, crime awareness, crime rate, cross passage, cultual diffenences, culture shock, curve chart, currency form, current account, cycling route, customer service, cut and polished, damages, dark clothes, dark trousers, dateline, data analysis, data assessment, date of birth, date of expiry, date slip, day pupil, day school, day shift, debts, decades, decayed teeth, decoration balloons, deliver a speach, delivery desk, department building, department store, departmental address, desire to learn, desk lamp, details, detective film, digital camera, digital system, different levels, dining hall, dining room, diseases, distant deadline, distance learning, divorce rate, distinguishing feature, distribution of population, downward trend, do training courses, Doctor's degree, domestic factors, domestic student, domestic violence, door key, door-to-door service, drugs, double lock, double room, double grill, Drama Theater, Drama Festival, drama teacher, draw a conclusion, disabled access, dropout rate, dress code, dress rehearsal, disputes, drinking machine, drinks and snacks, drink less coffee, driver's licence, driving licence, directors, drop-off site, drop-off, EL Nino, Eagle Road, eastern beach, eat harmful insects, economic growth, economic history, economy class, education exhibition, education officer, education standard, education system, electronic director, electric fan, electricity bill, electricity fee, electronic dictionary, email attachment, email account, email address, emergency contact person, emergency telephone number, dial
+contact lenses, cooperating research elements, coping with stress, corporation loan, cost effective, cost of living, costume party, cough mixture, country music, course fee, course and materials, course director, cover the cost, craft goods, credit card, creeks, crime awareness, crime rate, cross passage, cultural differences, culture shock, curve chart, currency form, current account, cycling route, customer service, cut and polished, damages, dark clothes, dark trousers, dateline, data analysis, data assessment, date of birth, date of expiry, date slip, day pupil, day school, day shift, debts, decades, decayed teeth, decoration balloons, deliver a speach, delivery desk, department building, department store, departmental address, desire to learn, desk lamp, details, detective film, digital camera, digital system, different levels, dining hall, dining room, diseases, distant deadline, distance learning, divorce rate, distinguishing feature, distribution of population, downward trend, do training courses, Doctor's degree, domestic factors, domestic student, domestic violence, door key, door-to-door service, drugs, double lock, double room, double grill, Drama Theater, Drama Festival, drama teacher, draw a conclusion, disabled access, dropout rate, dress code, dress rehearsal, disputes, drinking machine, drinks and snacks, drink less coffee, driver's licence, driving licence, directors, drop-off site, drop-off, EL Nino, Eagle Road, eastern beach, eat harmful insects, economic growth, economic history, economy class, education exhibition, education officer, education standard, education system, electronic director, electric fan, electricity bill, electricity fee, electronic dictionary, email attachment, email account, email address, emergency contact person, emergency telephone number, dial
 
 #### test paper 4
 emotion and mood, end of term, endangered species, energy industry, engineers, engineering room, engrave, enrollment fee, entrance fee, environment agency, environmental damage, environmental issues, environmental science, environmental studies, environmentally-friendly, Evening News, evening appointment, exercise one's muscles, exhibition of instruments, experimental for construction, experimental facilities, expected duration, express train, express way, extension number, extensive writing, exchange drafts, extra charge, extra workload, ethical film, eye doctor, eye contacts, essay plan, extinct species, face-to-face interview, failure rate, family medical history, familiar with, family abuse, family ticket, family name, family relationship, fancy dress, fancy ball, fancy dress party, falcons, farewell party, farming products, fear of unemployment, feel one's pulse, female corpse study, field method, field system, field trip, field work, film festival, film studio, financial advise, financial affairs, financial budget, financial department, financial executive, financial goal, financial market, financial organization, financial policy, financial problems, financial shortage, financial source, fine arts, fine texture, fire alarm, fire blanket, fire drill, fire management, first floor, first name, first-aid kit, first-year student, fish cakes, fish tank, fishing boat, fishing industry, fitness center, fitness club, fitness level, fitness training, fixed expenses, flexible working time, flight number, flowers' taste, flying craft, flying speed, food processing, food and oil, food chain, focus on, football club, football match, for sale, forestry industry, formal clothes, four nights, fortnight, fourth-year student
@@ -59,13 +59,13 @@ emotion and mood, end of term, endangered species, energy industry, engineers, e
 hotel crime, hunt for, house insurance, house key, housing agency, human beings, human consumption, human race, human resources, ice curling, ice pack, ice skating, identities, identity card, illegal profits, in visible view, immune system, in advance, in chemistry lab, in circles, in circulation, Indian Ocean, incoming calls, Independence Day, industrial material, information board, information video, information desk, information page, information sector, inland region, initial migration, injection of vaccine, institutes, institutions, insects haunting, instructors, instruction of handbook, instance coffee, interpersonal skills, insurance companies, insurance company, intensive course, intensive study, interlibrary service, intermediate course, internal clock, international club, international evening, international student card, international student, Internet access, Internet cafe, Internet system, investigators, irrigable land, isolated spot, job interview, jaws, joint membership, keepers, jump the queue, jump the line, killer whale, Kungfu film, kelp forest, key approach, key to reception, keywords, kick sb out of work, King-sized bed, king's suite, knives, kitchen table, kitchen utensils, lamps, listening tapescript, lack equipment, lack confidence, lack of confidence, landmark, large slide, large-scale housing, lecture hall, laser printing, last but not least, last name, lawyers, layout of resume, learning strategy, learning styles, leisure wear, leisure activities, level of maturity, lemon tree, letter of recommendation, library card, library resource, life science, life cycle, life expectancy, life insurance, lights, link to, literary film, list of headings, list of objectives
 
 #### test paper 7
-living cost, living expenses, loans, local walking club, local history, local industry, local pet shop, local product, local resident, local school, local shop, local student, local tribes, lookout points, lock all windows, long-term learn, loss of soil, lose temper, loudspeaker, love story, low nutrition, low-frequency noise, low income, magazines and journals, magical animals, machines and robots, martial arts, maid servant, mails, mailing list, major in nursing, main course, main entrance, main hall, main kitchen, main library, make an oppointment, make plans, map of cave, manage time better, manmade dam, manual facilities, market research, market cycle, market economy, marketing management, marketing research, marketing techniques, marketing seminar, marketing strategy, mass media, mind map, Master's degree, Master Card, meat and cheese, mathematic formula, mature students, media studies, media center, media room, medical science, medical center, medical history, book list, membership consultant, membership of club, mental ability, mental education, microwave oven, mid-autumn festival, midmornning snacks, mid-range, mid-semester, migration pattern, mileage ticket, miles, military museum, mill the grain on the ground, millions of, mountains, mineral water, minimum qualification, mining industry, mobile phone, Modern Languages, modern management hotel, modern sports facilities, money diary, money lender, money management, money order, monopoly of education , mosquito net, mother-in-law, movie poster, movement of muscle, music equipment, music instrument, notice board, name badge, native animals, negative effect, natural medicine, natural museum, natural fiber, new technologies, nights, night shift, no allergy, no charge, no nuts, non-medicine items, non-stop flight, not check idenditities, not for circulation, number of exposure, number of occupants, nursing care, Nursing Diploma, occupational factors, nursery, nursery school, obligatery course, self-sufficient, off campus, office assistant, overfill, oil explosion, olive oil, OHPEN
+living cost, living expenses, loans, local walking club, local history, local industry, local pet shop, local product, local resident, local school, local shop, local student, local tribes, lookout points, lock all windows, long-term learn, loss of soil, lose temper, loudspeaker, love story, low nutrition, low-frequency noise, low income, magazines and journals, magical animals, machines and robots, martial arts, maid servant, mails, mailing list, major in nursing, main course, main entrance, main hall, main kitchen, main library, make an oppointment, make plans, map of cave, manage time better, manmade dam, manual facilities, market research, market cycle, market economy, marketing management, marketing research, marketing techniques, marketing seminar, marketing strategy, mass media, mind map, Master's degree, Master Card, meat and cheese, mathematic formula, mature students, media studies, media center, media room, medical science, medical center, medical history, book list, membership consultant, membership of club, mental ability, mental education, microwave oven, mid-autumn festival, midmornning snacks, mid-range, mid-semester, migration pattern, mileage ticket, miles, military museum, mill the grain on the ground, millions of, mountains, mineral water, minimum qualification, mining industry, mobile phone, Modern Languages, modern management hotel, modern sports facilities, money diary, money lender, money management, money order, monopoly of education , mosquito net, mother-in-law, movie poster, movement of muscle, music equipment, music instrument, notice board, name badge, native animals, negative effect, natural medicine, natural museum, natural fiber, new technologies, nights, night shift, no allergy, no charge, no nuts, non-medicine items, non-stop flight, not check identities, not for circulation, number of exposure, number of occupants, nursing care, Nursing Diploma, occupational factors, nursery, nursery school, obligatery course, self-sufficient, off campus, office assistant, overfill, oil explosion, olive oil, OHPEN
 
 #### test paper 8
 on campus, on foot, on sale, on small scale, one-way ticket, one-way, online shopping, open admission, open shelves, open-book exam, optic examination, optional course, optional expenses, oral defence, orange juice, ordinary farmers, organic farming, organic fiber, organic food, organic material, Oriental studies, original reason, out circulation, out of temper, out of loan, outside activity, overall aim of the health club, overall trend, overdue and pay a fine, overhead projector, overhead view, overseas student, hitchhike, packages, package tour, packing list, Pacific Ocean, padding pool, pages, pal group relationship, palaces, palm tree, paper jam, parents' meeting's aim, parental teaching, part-time job, part-time, party wears, passport photos, pay for loss, payment method, per day, per month, per person, per week, per year, permit required, personal alarm, personal statement, personal trainer, PHD, philosophers, phone bill, photocopies of notes, photocopies of articles, photocopy of article, photocopy office, physical activities, physical education, physical surroundings, physical therapy, pie chart, pine tree, pink slip, placement test, planet science, Planet Society, planning meeting, planting garden, plastic bags, plastic collection, plus, pocket money, point of view, polish cars, poor area, pop test, population explosion, population growth, population of crocodiles, positive effect, possible causes of stress, postal survey, power company, practical material, practical skills, precautions, precious stone, presentation skills, President's suite, previous data, previous insurance company, previous result, previous studies, price list, principal, printed card, printed catalog, private bathroom, private property, private school, private trip, prize giving, professional learning, project work, project background, project outline, profits, psycological patients, psycological course, public transport, public awareness, public examination, public facilities, public health, public interest, public school, public service, public skills, quality of teaching, quality of education, quality of personnel, quarry tiles, property insurance, question handling, Queen's suite, queen-sized bed, Queen's Park, RA, railway rail, railway station, railway tracks, railway worker, random selection
 
 #### test paper 9
-range of English level, rapid population growth, raw materials, rare lions, rare species, rare fish, reach one's destination, readers, reading habits, reading hits, reading list, reading session, recall library books, recall system, receive prizes, reception area, reception center, reception desk, recreation therapy, recruiting method, recycling material, Red Flag, red kangaroo, red meat, reference books, reference skills, reference stacks, refresher course, registered mail, regular meeting, regulations, reinforced by wood and steel, relate to, remain steady, replacement of jobs, replacement policy, required course, research approach, research assistant, research findings, research methods, research opportunities, research results, research source, resident student, residential college, resistance from parents, resource management, resource protection, resource sharing, resources room, respect the local environment, result from , result in, review of literature, review promptly, rice cultivation, Riverside Restaurant, Rose Lane, robots, rock salt, romance story, Rose Garden, row house, round trip ticket, round trip, route map, road map, royal commission, rubber blanket, rubber tree, rules and regulations, run risks, running facilities, running tunnel, rural area, role of staff, rush hour, safety check, safety helmet, safety helmets, sales team, safety office, safety regulations, Silent Island, sandglass clock, satellite TV station, School of Arts and Sciences, school uniform, science fiction, science museum, scientific approach, scientific research, scores, sea otter, sea urchin, sea watch, seafood restaurant, seat belt, seating capacity, second floor, second-hand textbooks, secondary school, second-year student, sedentary lifesytle, selection method, self-access lab, self-defence, self-service restaurant, senior advisor, senior manager, senior staff, sense of achievement, sense of success, sensible exercise, sentences, service manager, set money aside, shared bathroom, shared social area, shear the sheep, sheep and cattle, sheep shearing, shift work, shop assistant, shop manager, shopping center, shopping list, shopping mall, shortage of money, sick note, side effects, safari zoo, safari park, similar experiments, single item, size of population, size of sample, silver cloth
+range of English level, rapid population growth, raw materials, rare lions, rare species, rare fish, reach one's destination, readers, reading habits, reading hits, reading list, reading session, recall library books, recall system, receive prizes, reception area, reception center, reception desk, recreation therapy, recruiting method, recycling material, Red Flag, red kangaroo, red meat, reference books, reference skills, reference stacks, refresher course, registered mail, regular meeting, regulations, reinforced by wood and steel, relate to, remain steady, replacement of jobs, replacement policy, required course, research approach, research assistant, research findings, research methods, research opportunities, research results, research source, resident student, residential college, resistance from parents, resource management, resource protection, resource sharing, resources room, respect the local environment, result from , result in, review of literature, review promptly, rice cultivation, Riverside Restaurant, Rose Lane, robots, rock salt, romance story, Rose Garden, row house, round trip ticket, round trip, route map, road map, royal commission, rubber blanket, rubber tree, rules and regulations, run risks, running facilities, running tunnel, rural area, role of staff, rush hour, safety check, safety helmet, safety helmets, sales team, safety office, safety regulations, Silent Island, sandglass clock, satellite TV station, School of Arts and Sciences, school uniform, science fiction, science museum, scientific approach, scientific research, scores, sea otter, sea urchin, sea watch, seafood restaurant, seat belt, seating capacity, second floor, second-hand textbooks, secondary school, second-year student, sedentary lifestyle, selection method, self-access lab, self-defence, self-service restaurant, senior advisor, senior manager, senior staff, sense of achievement, sense of success, sensible exercise, sentences, service manager, set money aside, shared bathroom, shared social area, shear the sheep, sheep and cattle, sheep shearing, shift work, shop assistant, shop manager, shopping center, shopping list, shopping mall, shortage of money, sick note, side effects, safari zoo, safari park, similar experiments, single item, size of population, size of sample, silver cloth
 
 #### test paper 10
 sky dome, sleeping pills, sleeping sickness, slide presentation, small scale, small scar on his chin, smoke alarms, social activities, social isolation, social issues, social matter effects, social matters, social problems, social status, social workers, soft drinks, soft toys, sound effect, solar system, solar power, sore throat, spare time, spare parts, spare socks, space shuttle, special audio equipment, special chemicals, special mail, special offers, special party hats, special rule, specialist engine design, specialized course, specialized museum, specialized sports facilities, species in rare animal area, species of crocodiles, spending plans, spiders, spiral notebook, sports article, sport suit, sport center, sports hall, sports shoes, spinose plants, stack system, stacks, standard of education, standard suite, stars, starter project, starting point, states, steak set, steam engine ship, steel and wood, stiff neck, still water, stock market, stomach and heart, stomach muscles training, stones, storage space, storehouse and temples, stories, story conference, stress levels, stress management, stressful, stretching, stretching movements, strict control, strong scent, strong wind, student account, student banking, student debt, student hostel, student information desk, student representative, student service, student support service, student union, studio apartment, study aids, study circle, study club, study techniques, styles, stuffed nose, stuffed toys, stuff of purse, subject access guide, subject access, submit the document, sufficient details, supportive atmosphere, support service, sun's position, suntan block, sun cream, summary report, survey conducted, survey of reading, survival course, swimming costume, swimming in waterfall, swimming pool, swimming suit, TA, tablets, take notes, take blood pressure, take one's temperature, take regular exercise, take risks, taxi stand, technical vocabulary, technical institution, teaching club, teaching hours, teaching method, teaching staff, teaching syllabus, teachers and faculty, tape recorder, telephone survey, television drama, temple wall, temples, tennis club, terraced house, terrestrial heat, teritary education, text structure, textbook allowance, the marketing department, the disabled, the old, the poor, the Milky Way
@@ -74,4 +74,4 @@ sky dome, sleeping pills, sleeping sickness, slide presentation, small scale, sm
 theme garden, theme of project, theme park, theoretical background, theoretical framework, tiger shark, theory chapters, theory of application, therapy method, tilled land, third floor, third-year student, thinking pattern, way of thinking, timetable, time measurement, time priority, time management, title of essay, to some degree, to some extent, toilet facilities, too much work, tomatoes, tones, top shelf, top ten, touching rocks, tour guide, tourism organization, tourist brochures, Town Hall, toy factory, traffic flow, traffic jam, traffic lights, traffic rules, traffic safety, transportation card, travel agency, travel package, traveller's cheque, treatment method, Trinity College, tropical diseases, tuition fee, tutorial system, twin room, TV series, TV chat show, under pressure, undergo processing, underground car park, under ground railway, unhealthy diet, Union Bank, units of measurement, University Drive, university facilities, university guide, University of Wollongong, university resource, unsocial hours, upward trend, urban area, vacuum cleaner, vacuum the stairs, vary according to the type, shape, vary one's diet, vegetable burger, video project, video recording, video signal, videotape editor, visual aids, VIP class, virtual learning, VISA, violent crimes, volcanic dust, warm bath, volume chart, voting system, waiting list, walking boots, walking club, weight training, washable shoes, washing machine, wedding photos, waste handling, waste disposal, X-ray, weaving blanket, water fee, water heater, water park, water resources, water skiing, weekly return, welcome package, welcome party, welfare department, Western Europe, wheelchair, white meat, wholesale, wide reading, wide writing, widen one's horizon, widen one's view, wind power, wind tunnels, window dressing, wing design, withdraw cash, women author, wood should be cut and seasoned, work objective, work place, work systematically, World Expo, wretched boat, wild animals, youth hostel, your own embassy, yellow fever
 
 #### test paper 12
-abbreviation access accessible accident affair announcement assume accommodation recommendation annex according breeding surrounding cooking account accountancy accounting addition additional address dress dressing assessment admission commission depression affect effect effective effectively appeal annual arrival applicant application applied appliance approach appointment approval approximate assistance assistant assosiate assosiation attachment attack attempt attitude attend attendance attention attentive business balloon cartoon spoon billion ballroom bathroom playroom roommates barren barrier better beffet beginner beginning planner planning blood bloom boot book booking bookset cannibal connect cassette cattle classical classification classmate comment commercial communication community common cotton coffee cottage cramming running wedding banned current currency cooperate crossroads dessert dissertation different difference dinner dizzy little pizza discuss discussion speech suggestion door dollar floor poor efficient essential exaggerate essay embassy issue cirreculum express congress pressed pressure fee feedback ferry fossil food foot football footprint goods gallen grammer handbook textbook notebook newsletters hippo hoover horror hall immune irrigation irritation useless impossible incorrect innovation interviewee lessen degree likelihood firewood matter mammal mass massage midday million narrator lookout occasion occupant occupation occupational offer office officer passage passport password pattern paddle penny personnel pottery process processing profession professor quesionnaire possibility opportunities robber otter rubbish Russia school kangaroo Scottish screen seafood settlement shuttle shopping swimming skiing setting steel steering stress stressful stiff staff stuff cliff success successful session concession summary summer summit supplementary supply support supportive tennis tunnel toothache traffic terraced terrestrial vaccine vacuum waitress willow weed wood woods zoo
+abbreviation access accessible accident affair announcement assume accommodation recommendation annex according breeding surrounding cooking account accountancy accounting addition additional address dress dressing assessment admission commission depression affect effect effective effectively appeal annual arrival applicant application applied appliance approach appointment approval approximate assistance assistant assosiate assosiation attachment attack attempt attitude attend attendance attention attentive business balloon cartoon spoon billion ballroom bathroom playroom roommates barren barrier better beffet beginner beginning planner planning blood bloom boot book booking bookset cannibal connect cassette cattle classical classification classmate comment commercial communication community common cotton coffee cottage cramming running wedding banned current currency cooperate crossroads dessert dissertation different difference dinner dizzy 0little pizza discuss discussion speech suggestion door dollar floor poor efficient essential exaggerate essay embassy issue cirreculum express congress pressed pressure fee feedback ferry fossil food foot football footprint goods gallen grammer handbook textbook notebook newsletters hippo hoover horror hall immune irrigation irritation useless impossible incorrect innovation interviewee lessen degree likelihood firewood matter mammal mass massage midday million narrator lookout occasion occupant occupation occupational offer office officer passage passport password pattern paddle penny personnel pottery process processing profession professor quesionnaire possibility opportunities rubber otter rubbish Russia school kangaroo Scottish screen seafood settlement shuttle shopping swimming skiing setting steel steering stress stressful stiff staff stuff cliff success successful session concession summary summer summit supplementary supply support supportive tennis tunnel toothache traffic terraced terrestrial vaccine vacuum waitress willow weed wood woods zoo
